--- a/index.html
+++ b/index.html
@@ -82,8 +82,11 @@
 								<h2>Introduction</h2>
 							</header>
 
-							<p></p>
-
+							<p>In this project, I am developing a circuit to stimulate current across the optic 
+							nerve of a rat to aid in optic nerve degeneration research at Keck School of Medicine.
+							The goal for this project is to create a programmable board that can stimulate up to 5 
+							milli-Amps across the optic nerve of rat. To prevent nerve damage, I designed a positive 
+							 and negative interface, which removes the deposited charge.</p>
 
 					</section>
 
@@ -101,15 +104,42 @@
 								<h2>Project</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/headshot.JPG" alt="" /></a>
+							<!-- Body now -->
+							<!--
+							<div class="col-4 col-8-mobile">
+								<article class="item">
+								  <a href="simulation-image" class="image fit">
+									<img src="images/simulation.jpg" alt="" width="377" height="497"/> --><!--  height: 975 px width: 1765 px  og size--><!--
+								  </a>
+								  <header>
+									<h3>Optic Nerve Tissue Stimulation Simulation using LTSpice</h3>
+								  </header>
+								</article>
+							  </div>
+							-->
+							  
+							  <div class="col-4 col-8-mobile">
+								<article class="item">
+									<div class="row">
+										<div class="col-6">
+											<a href="LTSpice-image" class="image fit">
+												<img src="images/LTSpice.jpg" alt="" width="274" height="401"/> <!-- height: 1427 px width: 1097 px og size -->
+											</a>
+											<a href="simulation-image" class="image fit">
+												<img src="images/simulation.jpg" alt="" width="353" height="195"/> <!-- height: 975 px width: 1765 px og size -->
+											</a>
+											<header>
+												<h3>Optic Nerve Tissue Stimulation Simulation using LTSpice</h3>
+											  </header>
+										</div>
+										<div class="col-6">
+											<p>I began this project by designing the circuit on LTSpice. Then, I simulated the circuit to test for the desired output. In the image to the left, I succesfully simulated three periods of 0.1 seconds of 4.9 milli-Amp stimulation and 0.3 seconds of -1.63 milli-Amps. A key design aspect of this project is mainting a net-charge depostion of 0. Thus, the area under the curve for the graph on the left is 0. Also, it is important that the positvely stimulation occurs quicker than the negative stimulation.</p>
+										</div>
+									</div>
+								</article>
+							</div>					
 
-							<p>Hello, my name is Marco Ebeling. I am a second-year undergraduate studying 
-							Electrical and Computer Engineer at the Univeristy of Southern California.
-							My interests include analog/RF integrated circuits, neuromodulation,
-						 	 and machine learning. Outside of the classroom, I enjoy playing basketball, exploring
-							 the outdoors, and creating YouTube videos.</p>
-
-						</div>
+							</div>
 					</section>
 
 				<!-- Back -->
