--- a/index.html
+++ b/index.html
@@ -148,6 +148,28 @@
 								</article>
 							  </div>	
 
+							  
+							<!-- Soldering and future goals -->
+							<div class="col-4 col-8-mobile">
+								<article class="item">
+									<div class="row">
+										<div class="col-6">											
+											<a href="Solder" class="image fit">
+												<img src="images/solder22.jpg" alt=""/>
+											</a>
+											<header>
+												<h3>Soldered Circuit Board</h3>
+											</header>
+										</div>
+										<div class="col-6">
+											<p>Once my PCB and its parts arrived, I began soldering. The 14-pin IC was difficult to solder due to its size. I began by soldering diagonal end pins, and then using flux and dragging the iron with solder on its tip across the rest of the pins.</p>
+											<p>With version 1 of my board complete, I look foward to making modifications in version 2. These modifications include interfacing the stimulation with a microcontroller, and using boost converters paired with the voltage output of the microcontroller to source the power.</p>
+										</div>
+									</div>
+								</article>
+							</div>				
+								  
+
 							</div>
 					</section>
 
